fix scrollbar

--- a/src/components/scrollToHeader/scrollToHeader.scss
+++ b/src/components/scrollToHeader/scrollToHeader.scss
@@ -17,8 +17,38 @@
     margin: 0;
     //min-width: fit-content;
     overflow-x: auto;
+    overflow-y: hidden;
+    transition: all 500ms ease-in-out;
+    &::-webkit-scrollbar {
+      width: 10px;
+      height: 0;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+      opacity: 0;
+      background: var(--color-white);
+      border: 1px solid var(--color-bras);
+      border-radius: 100px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+      cursor: pointer;
+    }
     @media (max-width: 991px) {
       justify-content: flex-start;
+    }
+    &:hover{
+      transition: all 500ms ease-in-out;
+      &::-webkit-scrollbar {
+        height: 5px;
+      }
     }
     li{
       padding: 8px;
